Corrected z-index of favorites bar to less than modals

--- a/index.css
+++ b/index.css
@@ -59,11 +59,6 @@ a:hover, a:active {
   color: #404a53;
 }
 
-/* #close-modal-icon i {
-  right: 0.2rem;
-  top: 87%;
-} */
-
 /* Instructions modal */
 #modal {
   display: block;
@@ -378,7 +373,7 @@ a:hover, a:active {
 
 /* Sticky class added to favorites bar with JS when is reaches scroll position */
 #favorite-colors-container.sticky {
-  z-index: 4;
+  z-index: 1;
   width: 100%;
   position: fixed;
   top: 0;
